<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bigomni_control</name>
  <version>0.0.0</version>
  <description>Low level controller for IIT BigOmni robot</description>
  <maintainer email="izso@iit.bme.hu">iit-robotcsapat</maintainer>
  <license>GPL-3.0-only</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
